# optimize_wrapper

./: .gitignore  README.md  pyproject.toml  setup.py
example/: app.py  requirements.txt
optimize_wrapper/: __init__.py  genetic_optimize.py  optimization_image.py  process_parametrization.py
src/: genetic_optimize.py
