[project]
name = "optimize_wrapper"
version = "0.1.0"
description = "A VIKTOR wrapper, to wrap your optimization function, to make it the fitness function for a Genetic Algorithm"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "munch>=4.0.0",
    "pygad>=3.5.0",
    "viktor>=14.24.0",
    "matplotlib",
    "numpy",
]

[tool.setuptools]
packages = ["optimize_wrapper"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"